--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -29,9 +29,9 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Esperanto: {{t+|eo|veto}}
 * Finnish: {{t+|fi|veto}}
 * French: {{t+|fr|pari}}
-* Georgian: {{t|ka|სანაძლეო|sc=Geor|tr=sanajleo}}, {{t|ka|ნაძლევი|sc=Geor|tr=najlevi}}
+* Georgian: {{t|ka|სანაძლეო|sc=Geor}}, {{t|ka|ნაძლევი|sc=Geor}}
 * German: {{t+|de|Wette|f}}
-* Greek: {{t+|el|στοίχημα|n|tr=stoíchima}}
+* Greek: {{t+|el|στοίχημα|n}}
 * Greenlandic: {{t|kl|eqquiniut}}
 * Hebrew: {{t|he|התערבות|f|tr=hitarvut}}
 {{trans-mid}}
@@ -42,12 +42,12 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Norwegian: {{t|no|veddemål|n}}
 * Polish: {{t+|pl|zakład|m}}
 * Portuguese: {{t+|pt|aposta}}
-* Russian: {{t+|ru|ставка|f|tr=stávka}}, {{t+|ru|заклад|m|tr=zaklád}}
+* Russian: {{t+|ru|ста́вка|f}}, {{t+|ru|закла́д|m}}
 * Serbo-Croatian: {{t|sh|opklada|m}}
 * Slovene: {{t|sl|stava|f}}
 * Spanish: {{t+|es|apuesta}}
 * Swedish: {{t+|sv|vad|n}}
-* Telugu: {{t|te|పంతం|tr=pantam}}
+* Telugu: {{t|te|పంతం}}
 * Turkish: {{t-needed|tr}}
 {{trans-bottom}}
 
@@ -61,7 +61,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 
 {{checktrans-top}}
 * {{ttbc|wuu}}:
-*: Suzhou dialect: [[ruán-tondæ]]
+*: Suzhou dialect: {{t-check|wuu|ruán-tondæ}}
 {{trans-bottom}}
 
 ====Verb====
@@ -94,15 +94,16 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Catalan: {{t+|ca|apostar}}
 * Chinese:
 *: Mandarin: {{t|cmn|打賭|sc=Hani}}, {{t+|cmn|打赌|tr=dǎdǔ|sc=Hani}}
-* Czech: {{t|cs|vsadit}}, {{t|cs|vsadit}} se
+* Czech: {{t|cs|vsadit}}, {{t|cs|vsadit|alt=vsadit se}}
 * Danish: {{t|da|vædde}}
 * Dutch: {{t+|nl|gokken}}, {{t+|nl|wedden}}
 * Esperanto: {{t|eo|veti}}
+* Faroese: {{t|fo|vedda}}
 * Finnish: {{t|fi|lyödä vetoa}}, {{t|fi|veikata}}
 * French: {{t+|fr|parier}}
 * Georgian: {{t|ka|დანიძლავება|sc=Geor}}
 * German: {{t+|de|wetten}}
-* Greek: {{t+|el|ποντάρω|tr=pontáro}}, {{t+|el|στοιχηματίζω|tr=stoichimatízo}}
+* Greek: {{t+|el|ποντάρω}}, {{t+|el|στοιχηματίζω}}
 {{trans-mid}}
 * Hebrew: {{t|he|התערב|tr=hit'arév}}
 * Indonesian: {{t+|id|taruh}}
@@ -114,7 +115,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Norwegian: {{t|no|vedde}}
 * Polish: {{t+|pl|postawić}}, {{t+|pl|zakładać się}}
 * Portuguese: {{t+|pt|apostar}}
-* Russian: {{t|ru|биться об заклад|tr=bít'sja ob zaklád}}, {{t+|ru|держать пари|tr=deržát' parí}}
+* Russian: {{t|ru|би́ться об закла́д}}, {{t+|ru|держа́ть пари́}}
 * Slovak: {{t|sk|staviť}}, {{t|sk|vsadiť}}, {{t|sk|stávkovať}}
 * Slovene: {{t|sl|staviti}}
 * Spanish: {{t+|es|apostar}}
@@ -126,7 +127,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 {{trans-top|To be sure of something}}
 * Bulgarian: {{t|bg|сигурен съм}}
 * Catalan: {{t+|ca|apostar}}
-* Czech: {{t|cs|vsadit}} se
+* Czech: {{t|cs|vsadit|alt=vsadit se}}
 * Dutch: {{t|nl|er op kunnen rekenen}}, {{t|nl|er van op aan kunnen}}
 * Latvian: {{t+|lv|būt}} [[pārliecināts|pārliecinātam]]
 {{trans-mid}}
@@ -274,6 +275,8 @@ From {{etyl|bat-pro|lv}} {{m|bat-pro|*bet}}, from {{etyl|ine-pro|lv}} {{m|ine-pr
 ----
 
 ==Lithuanian==
+
+===Etymology===
 From {{etyl|bat-pro|lv}} {{m|bat-pro|*bet}}, from {{etyl|ine-pro|lv}} {{m|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside, without}} to which an old particle ''-t'' was added. Cognates include {{etyl|lv|-}} {{term|bet|lang=lv}}, {{etyl|xsv|-}} {{term|bat|lang=xsv}}.<ref>{{R:lv:LEV}}</ref> 
 
 ===Pronunciation===
