--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -308,7 +308,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Esperanto: {{t|eo|porko}}
 * Finnish: {{t+|fi|porsas}}, {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
-* German: {{t|de|Fresssack|m}}, {{t|de|Fress-Sack|m}}, {{t+|fr|Schwein|n}}, {{t|de|Vielfraß|m}}
+* German: {{t|de|Fresssack|m}}, {{t|de|Fress-Sack|m}}, {{t+|de|Schwein|n}}, {{t|de|Vielfraß|m}}
 * Greek: {{t+|el|γουρούνι|n}}
 * Icelandic: {{t+|is|svín|n}}
 {{trans-mid}}
