--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -208,9 +208,9 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Lao: {{t+|lo|ໝູ|sc=Laoo}}
 * Latgalian: {{t|ltg|cyuka|f}}
 * Latin: {{t+|la|sus|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
+{{trans-mid}}
 * Latvian: {{t+|lv|cūka|f}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
-{{trans-mid}}
 * Luganda: {{t|lg|embizzi}}
 * Lusitanian: {{t|xls|porcom}}, {{t|xls|porgom}}
 * Macedonian: {{t|mk|свиња|f}}
@@ -281,6 +281,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Tuvan: {{t|tyv|хаван}}
 * Ukrainian: {{t|uk|свиня́|f}}
 * Urdu: {{t|ur|خوک|tr=xūk|sc=ur-Arab}}, {{t|ur|خنزیر|tr=xanzīr|sc=ur-Arab}}, {{t|ur|سؤر|m|tr=sū'ar|sc=ur-Arab}}
+* Urhobo: {{t|urh|esi}}
 * Uyghur: {{t|ug|چوشقا|sc=ug-Arab}}
 * Uzbek: {{t|uz|choʻchka}}
 * Venetian: {{t+|vec|mas-cio|m}}, {{t|vec|porselo|m}}, {{t|vec|porzèl|m}}
