--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -55,6 +55,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 * Catalan: {{t|ca|apoderar-se}}
 * Chinese:
 *: Mandarin: {{t|cmn|抓獲|sc=Hani}}, {{t|cmn|抓获|tr=zhuāhuò|sc=Hani}}, {{t|cmn|攫取|tr=juéqǔ|sc=Hani}}, {{t|cmn|捕獲|sc=Hani}}, {{t|cmn|捕获|tr=bǔhuò|sc=Hani}}
+* Czech: {{t|cs|popadnout|pf}}, {{t|cs|uchvátit|pf}}
 * Danish: {{t|da|gribe}}
 * Dutch: {{t+|nl|grijpen}}, {{t+|nl|vangen}}, {{t+|nl|pakken}}
 * Finnish: {{t+|fi|tarttua}}
@@ -93,6 +94,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 {{trans-bottom}}
 {{trans-top|take possession of (by force, law etc)}}
 {{trans-mid}}
+* Czech: {{t|cs|uchvátit}}, {{t+|cs|zabavit|pf}}, {{t|cs|zkonfiskovat}}
 * Portuguese: {{t+|pt|apreender}}
 {{trans-bottom}}
 {{trans-top|to have a sudden and powerful effect upon}}
