--- a/en/f/FOIL.26230.wikitext
+++ b/en/f/FOIL.26230.wikitext
@@ -11,7 +11,7 @@ See ''[[foil]]''
 ===Proper noun===
 {{en-proper noun}}
 
-# A particular [[algorithm]] for [[multiply]]ing two [[binomial]]s.
+# A particular mnemonic [[algorithm]] for [[multiply]]ing two [[binomial]]s.
 
 ====External links====
 * {{projectlink|wikipedia|FOIL method}}
