--- a/en/r/ready-made.741519.wikitext
+++ b/en/r/ready-made.741519.wikitext
@@ -6,7 +6,7 @@
 # [[made|Made]] or [[prepared]] in [[advance]] of need. {{rfquote}}
 
 ====Synonyms====
-* See also: [[Wikisaurus:custom-made]]
+* See the list of antonyms under [[Wikisaurus:custom-made]]
 
 ====Antonyms====
 * See also: [[Wikisaurus:custom-made]]
