--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -40,7 +40,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * French: {{t+|fr|consommation}}, {{t+|fr|consommer|m}}, {{t+|fr|consumer|m}}
 * Georgian: {{t|ka|მოხმარება|sc=Geor}}
 * German: {{t+|de|Konsum|m}}, {{t+|de|Verzehr|m}}
-* Greek: {{t+|el|κατανάλωση|f|tr=katanálosi|sc=Grek}}
+* Greek: {{t+|el|κατανάλωση|f|sc=Grek}}
 {{trans-mid}}
 * Hebrew: {{t+|he|צריכה|tr=tzrikha|f}} {{qualifier|act of consuming goods}}
 * Hungarian: {{t+|hu|fogyasztás}}
@@ -51,7 +51,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Malay: {{t|ms|penggunaan}}, {{t|ms|konsumsi}}
 * Portuguese: {{t+|pt|consumo|m}}
 * Romanian: {{t+|ro|consum|n}}
-* Russian: {{t+|ru|потребление|n|tr=potreblénije}}
+* Russian: {{t+|ru|потребле́ние|n}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 * Spanish: {{t+|es|consumo|m}}
 * Swedish: {{t+|sv|konsumtion|c}}
@@ -65,13 +65,13 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Finnish: {{t+|fi|kulutus}}
 * French: {{t+|fr|consommation|f}}
 * German: {{t+|de|Verbrauch|m}}, {{t|de|Verbrauchswert|m}}, {{t+|de|Verzehr|m}}
-* Greek: {{t+|el|κατανάλωση|f|tr=katanálosi|sc=Grek}}
+* Greek: {{t+|el|κατανάλωση|f|sc=Grek}}
 {{trans-mid}}
 * Italian: {{t+|it|consumo|m}}
 * Khmer: {{t|km|បម្រើបម្រាស់|tr=bom rer bom ras|sc=Khmr}}
 * Portuguese: {{t+|pt|consumo|m}}
 * Romanian: {{t+|ro|consum|n}}
-* Russian: {{t+|ru|потребление|n|tr=potreblénije}}, {{t+|ru|расход|m|tr=rasxód}}
+* Russian: {{t+|ru|потребле́ние|n}}, {{t+|ru|расхо́д|m}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 * Spanish: {{t+|es|consumo|m}}
 * Swedish: {{t+|sv|konsumtion|c}}
@@ -80,10 +80,10 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 {{trans-top|wasting-away of the human body through disease}}
 * Dutch: {{t+|nl|wegteren|n}}
 * Finnish: {{t|fi|riutuminen}}
-* Greek: {{t+|el|φθίση|f|tr=fthísi|sc=Grek}}
+* Greek: {{t+|el|φθίση|f|sc=Grek}}
 {{trans-mid}}
 * Italian: {{t+|it|consunzione|f}}, {{t|it|deperimento|m}}
-* Russian: {{t+|ru|истощение|n|tr=istoščénije}}
+* Russian: {{t+|ru|истоще́ние|n}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 {{trans-bottom}}
 
