--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -230,6 +230,7 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 * Armenian: {{t|hy|շնիկ|sc=Armn}}
 * Georgian: {{t|ka|ძაღლუკა}}
 {{trans-mid}}
+* Greek: {{t+|el|παπάκι|n|tr=papaki|sc=Grek}}
 * Italian: {{t+|it|chiocciola|f}}
 * Polish: {{t+|pl|małpa|f}}
 * Russian: {{t|ru|собачка}}
