--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -8,7 +8,7 @@
 * {{l|en|ylond}}, {{l|en|ylelond}}, {{l|en|yland}} {{qualifier|obsolete}}
 
 ===Etymology===
-From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland}}, {{m|enm|ylond}}, from {{etyl|ang|en}} {{m|ang|īġland}}, {{m|ang|īeġland}}, {{m|ang|ēaland||island}}, from {{etyl|ang|en}} {{m|ang|īeġ||island}} (from {{etyl|gem-pro|en}} {{m|gem-pro|*awiz}}, {{m|gem-pro|*awjō||island, water, waterland, meadow}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*h₂ekʷeh₂}}) + {{m|ang|land||land}}, equivalent to {{compound|ea|land|lang=en}}. Cognate with {{etyl|sco|-}} {{m|sco|iland}}, {{m|sco|yland||island}}, {{etyl|fy|-}} {{m|fy|eilân||island}}, {{etyl|stq|-}} {{m|stq|Ailound||island}}, {{etyl|nl|-}} {{m|nl|eiland||island}}, {{etyl|nds|-}} {{m|nds|Eiland||island}}, {{etyl|de|-}} {{m|de|Eiland||island}}, {{etyl|da|-}} {{m|da|øland||island}}, {{etyl|is|-}} {{m|is|eyland||island}}. The erroneous insertion of ''s''—a late (16th century) spelling modification—is due to unrelated term {{m|en|isle}}. Related also to {{etyl|de|-}} {{m|de|Aue||water-meadow}}, {{etyl|la|-}} {{m|la|aqua||water}}. More at {{l|en|ea}}.
+From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland}}, {{m|enm|ylond}}, from {{etyl|ang|en}} {{m|ang|īġland}}, {{m|ang|īeġland}}, {{m|ang|ēaland||island}}, from {{etyl|ang|en}} {{m|ang|īeġ||island}} (from {{etyl|gem-pro|en}} {{{m|gem-pro|*awjō||island, waterland, meadow}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*h₂ekʷeh₂}}) + {{m|ang|land||land}}, equivalent to {{compound|ea|land|lang=en}}. Cognate with {{etyl|sco|-}} {{m|sco|iland}}, {{m|sco|yland||island}}, {{etyl|fy|-}} {{m|fy|eilân||island}}, {{etyl|stq|-}} {{m|stq|Ailound||island}}, {{etyl|nl|-}} {{m|nl|eiland||island}}, {{etyl|nds|-}} {{m|nds|Eiland||island}}, {{etyl|de|-}} {{m|de|Eiland||island}}, {{etyl|da|-}} {{m|da|øland||island}}, {{etyl|is|-}} {{m|is|eyland||island}}. The erroneous insertion of ''s''—a late (16th century) spelling modification—is due to unrelated term {{m|en|isle}}. Related also to {{etyl|de|-}} {{m|de|Aue||water-meadow}}, {{etyl|la|-}} {{m|la|aqua||water}}. More at {{l|en|ea}}.
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|/ˈaɪ̯lənd/|lang=en}}
