--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -42,7 +42,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 |title={{w|The Celebrity}}|chapter=8
 |passage=The humor of my proposition appealed more strongly to Miss Trevor than I had looked for, and from that time forward she became her old self '''again''';{{...}}. Our table in the dining-room became '''again''' the abode of scintillating wit and caustic repartee, Farrar bracing up to his old standard, and the demand for seats in the vicinity rose to an animated competition.}}
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=1
-|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
+|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
 |passage=Thinks I to myself, &ldquo;Sol, you're run off your course again. This is a rich man's summer &lsquo;cottage&rsquo;{{nb...}}.{{nb...}}.&rdquo; So I started to back away '''again''' into the bushes. But I hadn't backed more'n a couple of yards when I see something so amazing that I couldn't help scooching down behind the bayberries and looking at it.}}
 #* '''1931''', Robert L. May, ''Rudolph, The Red-Nosed Reindeer'', Montgomery Ward (publisher), draft:
 #*: He tangled in tree-tops '''again''' and '''again'''<!--,--> / And barely missed hitting a tri-motored plane.
