--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -242,7 +242,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 #* '''1968''', {{w|Johnny Cash}}, ''[[wikia:lyrics:Johnny Cash:Folsom Prison Blues|Folsom Prison Blues]]''
 #*: ''I hear the train a comin'/It's rolling round the '''bend'''''
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=1
-|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
+|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
 |passage=I stumbled along through the young pines and huckleberry bushes. Pretty soon I struck into a sort of path that, I cal'lated, might lead to the road I was hunting for. It twisted and turned, and, the first thing I knew, made a sudden '''bend''' around a bunch of bayberry scrub and opened out into a big clear space like a lawn.}}
 #: {{usex|There's a sharp '''bend''' in the road ahead.|lang=en}}
 # {{context|nautical|lang=en}} Any of the various [[knot]]s which [[join]] the ends of two [[line]]s.<!-- or the end of a line into some other object; (the latter are called hitch)
