--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -29,7 +29,7 @@
 * Polish: {{t+|pl|czworonóg|m}}
 * Portuguese: {{t+|pt|quadrúpede|m}}
 * Russian: {{t+|ru|четвероногий|n|tr=četveronógoje|alt=четвероно́гое}} {{qualifier|живо́тное}}, {{t+|ru|тетрапо́д|m|tr=tɛtrapód}}
-* Spanish: {{t+|es|cuadrúpedo|m}}
+* Spanish: {{t+|es|cuadrúpedo|m}}, {{t|es|tetrápodo|m}}
 * Swedish: {{t|sv|fyrfotadjur|n}}, {{t|sv|tetrapod|c}}, {{t|sv|fyrfoting|c}}
 * Telugu: {{t+|te|చతుష్పదము|tr=chatush-padamu}}
 * Tocharian B: {{t|txb|śwerppewä}}
