--- a/en/n/nettling.746834.wikitext
+++ b/en/n/nettling.746834.wikitext
@@ -6,10 +6,13 @@
 # {{present participle of|nettle|lang=en}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
 
 # {{context|ropemaking|lang=en}} A process, resembling [[splicing]], by which two [[rope]]s are joined so as to form one rope.
 # The process of tying together the ends of [[yarn]]s in [[pair]]s, to prevent tangling.
+# The process of [[sting]]ing somebody with nettles.
+#* '''2000''', Harriet Whitehead, ''Food Rules: Hunting, Sharing, and Tabooing Game in Papua New Guinea''
+#*: Their greater male strength will be both tested and attested to in their ability to undergo the initiation '''nettlings''', beatings, and burnings administered to them by the older initiators {{...}}
 
 [[de:nettling]]
 [[fr:nettling]]
