--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -34,7 +34,7 @@ From {{etyl|xno|en}} {{term|genette|lang=fro}}, {{etyl|frm|en}} {{term|genette|l
 * Navajo: {{t|nv|dlǫ́ʼiitsoh áłtsʼózígíí}}
 * Romanian: {{t|ro|genetă|f}}, {{t|ro|ginetă|f}}
 * Russian: {{t+|ru|гене́тта|f|sc=Cyrl|tr=genétta}}, {{t|ru|гене́та|f|sc=Cyrl|tr=genéta}}
-* Spanish: {{t+|es|jineta}}
+* Spanish: {{t+|es|jineta|f}}, {{t|es|gineta|f}}
 {{trans-bottom}}
 
 ===Etymology 2===
