--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -17,7 +17,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 {{en-noun|head=sir or Sir|s}}
 
 # A man of a higher [[rank]] or [[position]].
-# An address to a military [[superior]] of either sex.
+# An address to a male military officer [[superior]].
 #: ''Yes '''sir'''.''
 # An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown.
 #: ''Excuse me, '''sir''', could you tell me where the nearest bookstore is?''
