--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -55,56 +55,14 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 ====Meronyms====
 * {{sense|in logic}} [[axiom]]s
 
+====Hyponyms====
+{{hyp3|[[acoustic theory]]|[[algorithmic information theory]]|[[antenna theory]]|[[atomic theory]]|[[catastrophe theory]]|[[category theory]]|[[cell theory]]|[[chaos theory]]|[[circuit theory]]|[[complexity theory]]|[[computation theory]]|[[control theory]]|[[critical theory]]|[[decision theory]]|[[domino theory]]|[[extreme value theory]]|[[game theory]]|[[giant impact theory]]|[[graph theory]]|[[group theory]]|[[information theory]]|[[kinetic theory of gases]]|[[knot theory]]|[[literary theory]]|[[M-theory]]|[[music theory]]|[[number theory]]|[[opponent-process theory]]|[[phlogiston theory]]|[[probability theory]]|[[proof theory]]|[[quantum field theory]]|[[rational choice theory]]|[[set theory]]|[[signal theory]]|[[social theory]]|[[systems theory]]|[[theory of gravity]]|[[theory of relativity]]|[[theory of truth]]|[[Theory X]]|[[Theory Y]]|[[type theory]]|[[value theory]]|[[virtue theory]]|lang=de}}
+
 ====Derived terms====
-{{rel-top3|terms derived from theory}}
-* [[acoustic theory]]
-* [[algorithmic information theory]]
-* [[antenna theory]]
-* [[atomic theory]]
-* [[catastrophe theory]]
-* [[category theory]]
-* [[cell theory]]
-* [[chaos theory]]
-* [[circuit theory]]
-* [[complexity theory]]
-* [[computation theory]]
-* [[control theory]]
-* [[critical theory]]
-* [[decision theory]]
-{{rel-mid3}}
-* [[domino theory]]
-* [[extreme value theory]]
-* [[game theory]]
-* [[giant impact theory]]
-* [[graph theory]]
-* [[group theory]]
+* [[M-theory]]
+
+====Related terms====
 * [[in theory]]
-* [[information theory]]
-* [[kinetic theory of gases]]
-* [[knot theory]]
-* [[literary theory]]
-* [[music theory]]
-* [[number theory]]
-* [[opponent-process theory]]
-* [[phlogiston theory]]
-{{rel-mid3}}
-* [[probability theory]]
-* [[proof theory]]
-* [[quantum field theory]]
-* [[rational choice theory]]
-* [[set theory]]
-* [[signal theory]]
-* [[social theory]]
-* [[systems theory]]
-* [[theory of gravity]]
-* [[theory of relativity]]
-* [[theory of truth]]
-* [[Theory X]]
-* [[Theory Y]]
-* [[type theory]]
-* [[value theory]]
-* [[virtue theory]]
-{{rel-bottom}}
 
 ====Related terms====
 * [[theorem]]
