--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -3,6 +3,7 @@
 ===Alternative forms===
 * [[tho]]
 * [[tho’]]
+www.kovaigaadi.com
 
 ===Etymology===
 From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{etyl|ang|en}} {{m|ang|þēah|| though, although, even if, that, however, nevertheless, yet, still; whether}}, later superseded in many dialects by {{etyl|enm|en}} {{term|though|lang=enm}}, {{term|thogh|lang=enm}}, from {{etyl|non|en}} {{m|non|*þóh}} (later {{term|þó|lang=non}}); both from {{etyl|gem-pro|en}} {{m|gem-pro|*þauh||though}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*to-}}, suffixed with {{etyl|gem-pro|en}} {{m|gem-pro|*-hw}} &lt; {{etyl|ine-pro|en}} {{m|ine-pro|*-kʷe||and}}. Akin to Scots {{term|thoch||though|lang=sco}}, {{etyl|stq|-}} {{term|dach||though|lang=stq}}, {{etyl|fy|-}} {{term|dôch|lang=fy}}, {{term|dochs||though|lang=fy}}, {{etyl|nl|-}} {{term|doch||though|lang=nl}}, {{etyl|de|-}} {{term|doch||though|lang=de}}, {{etyl|sv|-}} {{term|dock||however, still|lang=sv}}, {{etyl|is|-}} {{term|þó||though|lang=is}}. More at [[that]].
