--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -21,13 +21,21 @@ From the Gerber Childrenswear brand name Onesies. The name became generic and wa
 
 ====Translations====
 {{trans-top|a one-piece baby garment}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Dutch: {{t+|nl|romper|m}}, {{t|nl|rompertje|n}}, {{t|nl|kruippak|n}}, {{t|nl|kruippakje|n}}
 {{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
 {{trans-top|an adult loungewear jumpsuit}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Dutch: {{t+|nl|romper|m}}
 {{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
 [[Category:en:Clothing]]
