--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -206,7 +206,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Welsh: {{t+|cy|cwningen|f}}
 * West Frisian: {{t|fy|knyn}}
 * Wolof: {{t|wo|njomboor|alt=njomboor ji}}
-* Yiddish: {{t|yi|קיניגל|n|tr=kinigl|sc=Hebr}}, {{t|yi|קראָליק|m|tr=krolik|sc=Hebr}}
+* Yiddish: {{t|yi|קיניגל|n|tr=kinigl|sc=Hebr}}, {{t|yi|קראָליק|m|tr=krolik|sc=Hebr}}, {{t|yi|האָז|m|sc=Hebr}}
 * Zazaki: {{t|zza|arwéş}}
 {{trans-bottom}}
 
