--- a/en/h/haematidrosis.746522.wikitext
+++ b/en/h/haematidrosis.746522.wikitext
@@ -10,10 +10,10 @@
 * [[haematohidrosis]]
 
 ===Etymology===
-From Greek ''haimato-'', "blood" + ''hidroun'', "to sweat".
+From {{etyl|grc|en}} {{m|grc|αἷμα|αἵμᾰτ-|blood}} + {{m|grc|ἱδρόω||to sweat}}.
 
 ===Pronunciation===
-* {{IPA|/ˌhe-mat-idˈro-sis/|lang=en}}
+{{rfp|lang=en}}
 
 ===Noun===
 [[File:Hematohidrosis-Indian-Journal-Dermatology-Dermatol-2013-58-6-478-119964-f1.jpg|250px|thumb|'''blood sweat''']]
@@ -23,7 +23,7 @@ From Greek ''haimato-'', "blood" + ''hidroun'', "to sweat".
 # Bloody sweat; [[sweat]]ing [[blood]].
 
 ====Synonyms====
-[[hematohidrosis]]
+* [[hematohidrosis]]
 
 ===References===
 * [http://www.medicineword.com/haematidrosis.shtml MedicineWord.com]
