--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -5,10 +5,10 @@
 From {{etyl|fr|en}} {{term|monarchisme|lang=fr}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
 
-# Rule by a [[monarchy]]
-# The advocacy of such a [[political]] system
+# Rule by a [[monarchy]].
+# The advocacy of such a [[political]] system.
 
 ====Translations====
 {{trans-top|advocacy of the monarchistic political system}}
