--- a/en/t/togue.855176.wikitext
+++ b/en/t/togue.855176.wikitext
@@ -4,7 +4,7 @@
 * {{IPA|/toʊɡ/|lang=en}}
 
 ===Noun===
-{{en-noun|togue}}
+{{en-noun|s|togue}}
 
 # [[lake trout|Lake trout]], ''[[Salvelinus namaycush]]'', a freshwater [[char]] of northern North America.
 
