--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -25,7 +25,7 @@ From the Gerber Childrenswear brand name Onesies. The name became generic and wa
 *: Mandarin: {{t-needed|cmn}}
 * Dutch: {{t+|nl|romper|m}}, {{t|nl|rompertje|n}}, {{t|nl|kruippak|n}}, {{t|nl|kruippakje|n}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|potkupuku}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
