--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -34,7 +34,7 @@ From the Gerber Childrenswear brand name Onesies. The name became generic and wa
 *: Mandarin: {{t-needed|cmn}}
 * Dutch: {{t+|nl|romper|m}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|haalari}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
