--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -6,6 +6,7 @@
 * {{audio|en-us-vodka.ogg|Audio (US)|lang=en}}
 
 ===Etymology===
+{{PIE root|en|wed}}
 {{etyl|ru|en}} {{m|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.  Historical documentary research of V. Pokhlyobkin suggests the derivation via the usage "dilution (of [[distil]]late) with water", as used in expressions "vodka of grain wine" and similar; {{m|ru|хле́бное вино́||grain wine}} is an archaic Russian name for vodka.
 
 The standard of identity is from the [[s:Code of Federal Regulations|Code of Federal Regulations]], title 27, section 5.22(a)(1).
