--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -4,6 +4,7 @@
 [[Image:Loutre des pyrenees baronnies 2004.jpg|thumb|otter (1)]]
 
 ===Etymology 1===
+{{PIE root|en|wed}}
 From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*udrós||aquatic, water-animal}}, from {{m|ine-pro|*wed-||water}}. Cognate with {{etyl|goh|-}} {{m|goh|ottar}}, {{etyl|cu|-}} {{m|cu|ⰲⱏⰺⰴⱃⰰ|tr=vydra|sc=Glag}}, and {{etyl|grc|-}} {{m|grc|ὕδρα|tr=hydra||water snake|sc=polytonic}}. More etymology under English [[water]].
 
 ====Pronunciation====
@@ -151,6 +152,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 ==Dutch==
 
 ===Etymology===
+{{PIE root|nl|wed}}
 From {{etyl|dum|nl}} {{term|otter|lang=dum}}, from {{etyl|odt|nl}} {{term|ottar|lang=odt}}, from {{etyl|gem-pro|nl}} {{m|gem-pro|*utraz}}, from {{etyl|ine-pro|nl}} {{m|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}.
 
 ===Pronunciation===
