--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -177,7 +177,7 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 {{trans-bottom}}
 
 {{trans-top|in the direction of}}
-* Arabic: {{t|ar|في|tr=fi|sc=Arab}}, {{t|ar|صوب|tr=ṣawb|sc=Arab}}
+* Arabic: {{t|ar|صوب|tr=ṣawb|sc=Arab}}
 *: Egyptian Arabic: {{t|arz|ناحية|tr=naḥyet|sc=Arab}}
 * Bulgarian: {{t+|bg|в|sc=Cyrl}}
 * Chinese:
