--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -55,7 +55,7 @@ Abbreviation of various terms and phrases.
 
 ====Translations====
 {{trans-top|abbreviations of compact-disc which are actually in use; for the full term's translations, see "[[compact disc]]"}}
-* Arabic: {{t|ar|CD|m|tr=sii dii}}
+* Arabic: {{t|ar|CD|m|tr=sii dii}}, {{t|ar|سي دي|m|tr=sii dii|sc=Arab}}
 * Armenian: {{t|hy|CD|sc=Armn}}
 * Bengali: {{t|bn|সিডি|sc=Beng}}
 * Chinese:
