--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -1,5 +1,5 @@
 ==English==
-{{wikipedia}}
+{{wikipedia|Onesie (jumpsuit)}}
 [[Image:Baby.jpg|thumb|right|Baby wearing a '''onesie'''.]]
 
 ===Etymology===
