--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Italian: {{t+|it|scoiattolo|m}}
 * Japanese: {{t|ja|栗鼠|tr=りす, risu}}, {{t|ja|リス|tr=risu|sc=Jpan}}
 * Javanese: {{t+|jv|bajing}}
+* K'iche': {{t|quc|kuk}}
 * Karachay-Balkar: {{t|krc|эрлен|tr=erlen|sc=Cyrl}}, {{qualifier|karachay}} {{t|krc|агъач къоян|tr=ağaç qoyan|sc=Cyrl}}, {{qualifier|obsolete}} {{t|krc|тыйын|tr=tıyın|sc=Cyrl}}
 * Kazakh: {{t|kk|тиін}}
 * Khakas: {{t|kjh|тиин|tr=tiin|sc=Cyrl}}
