--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -108,6 +108,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: Jawi: {{t|ms|توڤاي|sc=Arab}}, {{t|ms|باجيڠ|sc=Arab}}
 * Maltese: {{t|mt|skwiril|m}}
 * Manx: {{t|gv|fiorag|f}}
+* Nahuatl: {{t+|nah|mōtohtli}}
 * Narragansett: {{t|xnt|mishánneke}}
 * Navajo: {{t|nv|tseekʼi nástánii}}
 * Nivkh: {{t|niv|лаӄр̌|tr=laqrš|sc=Cyrl}}
