--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -119,6 +119,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Old English: {{t|ang|ācweorna|m}}
 * Old Norse: {{t|non|íkorni|m}}
 * Persian: {{t+|fa|سنجاب|tr=sanjâb|sc=fa-Arab}}, {{t|fa|وروره|tr=varvare|sc=fa-Arab}}
+* Pipil: {{t|ppl|mututzin}}
 * Polish: {{t+|pl|wiewiórka|f}}
 * Portuguese: {{t+|pt|esquilo|m}}
 * Powhatan: {{t|pim|messanik}}
