--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -555,7 +555,7 @@ From {{etyl|azc-nah-pro|ppl}} {{m|azc-nah-pro|*ātla}}, from {{etyl|azc-pro|ppl}
 * {{IPA|/aːt/|lang=ppl}}
 
 ===Noun===
-{{ppl-noun|head=āt|p=ajāt}}
+{{ppl-noun|head=āt|pl=ajāt}}
 
 # [[water]]
 #: {{ux|ppl|Shikuni chiupi '''at'''|Drink some '''water'''}}
