--- a/en/i/inextinguishable.742115.wikitext
+++ b/en/i/inextinguishable.742115.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|incapable of being extinguished}}
+* Armenian: {{t+|hy|անշեջ}}
 * Italian: {{t|it|inestinguibile}}
 {{trans-mid}}
 * Portuguese: {{t|pt|inextinguível}}
