--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -76,6 +76,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 =====Translations=====
 {{trans-top|to turn one's consideration to, deal with}}
 * Bulgarian: {{t|bg|обръщам внимание}}, {{t|bg|грижа се}}, {{t+|bg|прислужвам}}
+* Catalan: {{t+|ca|atendre}}
 * Czech: {{t+|cs|zabývat se}}
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
