--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -80,6 +80,7 @@ From {{etyl|enm|en}} {{term|beden|lang=enm}}, from the {{etyl|ang|en}} verb {{m|
 
 =====Derived terms=====
 * [[bid one's time]]
+bide one's time
 
 =====Translations=====
 {{trans-top|intransitive: to make an offer}}
