--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -373,7 +373,7 @@ From {{etyl|non|fo}} {{m|non|at||at, to}}, from {{etyl|gem-pro|fo}} {{m|gem-pro|
 ==Irish==
 
 ===Etymology===
-From {{etyl|sga|ga}} {{m|sga|att}}.
+From {{etyl|sga|ga}} {{m|sga|att||swelling, protuberance, tumour}}.
 
 ===Pronunciation===
 * {{IPA|/at̪ˠ/|lang=ga}}
@@ -392,6 +392,7 @@ From {{etyl|sga|ga}} {{m|sga|att}}.
 
 # [[swell]]
 # [[bloat]]
+# {{qualifier|of sea}} [[heave]]
 
 ====Conjugation====
 {{ga-conj-1a|a||t|broad|vn=at}}
@@ -401,6 +402,10 @@ From {{etyl|sga|ga}} {{m|sga|att}}.
 
 ===Mutation===
 {{ga mut vowel}}
+
+===References===
+* {{R:ga:ODonaill}}
+* {{R:DIL|att}}
 
 ----
 
