--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -27,7 +27,7 @@ From {{etyl|la|en}} {{term|lang=la|quadrilaterus}}, [[quadri-]] (four) + [[latus
 * Finnish: {{t+|fi|nelikulmio}}
 * French: {{t+|fr|quadrilatère}}, {{t+|fr|quadrangle|m}}
 * German: {{t+|de|Viereck}}
-* Greek: {{t+|el|τετράγωνο|n}}, {{t+|el|τετράπλευρο|n}}
+* Greek: {{t+|el|τετράπλευρο|n}}
 * Hebrew: {{t|he|מרובע|alt=מרובע \ מְרֻבָּע|m|tr=merubá}}
 * Hindi: {{t|hi|चतुर्भुज}}
 * Hungarian: {{t+|hu|négyszög}}
