--- a/en/o/odd one out.742292.wikitext
+++ b/en/o/odd one out.742292.wikitext
@@ -13,11 +13,13 @@
 {{trans-top|misfit}}
 * Hungarian: {{t|hu|kakukktojás}}
 {{trans-mid}}
+* Japanese: {{t|ja|仲間外れ|tr=なかまはずれ, nakama hazure}}
 {{trans-bottom}}
 
 {{trans-top|puzzle}}
 * Hungarian: {{t|hu|kakukktojás}}
 {{trans-mid}}
+* Japanese: {{t|ja|仲間外れ|tr=なかまはずれ, nakama hazure}}
 {{trans-bottom}}
 
 ====Synonyms====
