--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -234,7 +234,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Ngazidja Comorian: {{t|zdj|purunku}}
 * Nivkh: {{t|niv|овӻоӈ|tr=ovx̌oŋ|sc=Cyrl}}
 * Norman: {{t|nrf|couochon|m}}, {{t|nrf|bête à saie|f}}, {{t|nrf|por|m}}, {{t|nrf|gronneux|m}}, {{t|nrf|moussieu|m}}, {{t|nrf|quétot|m}}
-* Northern Sami: {{t|ne|spiidni}}
+* Northern Sami: {{t|se|spiidni}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|pòrc|m}}
