--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -86,7 +86,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Thai: {{t+|th|ไผ่|tr=pài|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
 * Volapük: {{t+|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
-* Waray: {{t+|war|kawayan}}
+* Waray-Waray: {{t+|war|kawayan}}
 {{trans-bottom}}
 
 {{trans-top|wood}}
