--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -8,7 +8,7 @@ From {{etyl|fro|en}}, from {{etyl|la|en}} {{lena}} {{term|consonantia|lang=la}}
 {{examples-right|sense=prosody|examples=''lady lounges lazily, dark deep dread crept in''}}
 
 # {{context|prosody|lang=en}} The [[repetition]] of [[consonant]] [[sounds]], but not [[vowels]] as in [[assonance]].
-# {{context|chiefly|music|lang=en}} [[harmony]]; [[agreement]]; lack of [[discordance]]
+# {{context|chiefly|music|lang=en}} [[harmony|Harmony]]; [[agreement]]; lack of [[discordance]].
 #* Tyndall
 #*: The optic nerve responds to the waves with which it is in '''consonance'''.
 
