--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -86,6 +86,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Malagasy: {{t+|mg|langilangy}}, {{t+|mg|tehina}}
 * Maori: {{t|mi|turupou}}
 * Norwegian: {{t|no|stav}}
+* Persian: {{t+|fa|عصا|tr='asâ|sc=fa-Arab}}
 * Polish: {{t+|pl|laska|f}}, {{t+|pl|kij|m}}
 * Portuguese: {{t+|pt|cajado|m}}
 * Russian: {{t+|ru|по́сох|m}}, {{t+|ru|па́лка|f}}, {{t+|ru|жезл|m}} {{qualifier|rod, wand}}
