--- a/en/w/wah lau.720445.wikitext
+++ b/en/w/wah lau.720445.wikitext
@@ -4,12 +4,15 @@
 * {{l|en|wahlau}}
 
 ===Etymology===
-Said to be from {{etyl|nan-hok|en}} {{zh-l|[[我]][[老爸]]|tr=góa lāu-pē}}, which literally means "my father".
+From {{etyl|nan-teo|en}} and {{etyl|nan-hok|en}}. Ultimate origin uncertain: first element equivalent to {{etyl|nan-hok|en}} {{zh-l|[[我]]|tr=góa|my}} + ''lau'', possibly from {{zh-l|[[老爸]]|tr=lāu-pē|father}}. Originating in the 1990s.
 
 ===Interjection===
 '''[[wah]] [[lau]]'''
 
 # {{context|Singapore|lang=en}} [[oh no|Oh no]]!
+
+===Derivative forms===
+* [[wahlau-eh]]
 
 [[Category:Singlish]]
 
