--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -29,6 +29,7 @@
 * Greek: {{t+|el|αφαίρεση|f}}
 * Hungarian: {{t+|hu|kivonás}}
 {{trans-mid}}
+* Ido: {{t+|io|sustraciono}}
 * Italian: {{t+|it|sottrazione|f}}
 * Japanese: {{t|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}, {{t|ja|減法|tr=げんぽう, genpō|sc=Jpan}}
 * Norwegian:
