--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -312,11 +312,11 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 ===Verb===
 {{en-verb}}
 
-# {{context|transitive|lang=en}} To surround with water; make into an island
+# {{context|transitive|lang=en}} To surround with water; make into an island.
 #* '''1933''', Harriet Monroe, Poetry: Volume 42
 #*: We paused at little river cities along the way and walked upon their bushy dikes, and heard tales of overflows in flood seasons, when four feet or more of water '''islanded''' the houses.
-# {{context|transitive|lang=en}} To set, dot (as if) with islands
-# {{context|transitive|lang=en}} To [[isolate]]
+# {{context|transitive|lang=en}} To set, dot (as if) with islands.
+# {{context|transitive|lang=en}} To [[isolate]].
 #* {{w|A. E. Housman}}, {{w|A Shropshire Lad}}, XXVII, lines 1-2
 #*: ''High the vanes of {{w|Shrewsbury}} gleam
 #*: '''Islanded''' in Severn stream''.
