--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -111,7 +111,7 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 ==French==
 
 ===Etymology===
-Probably from {{term|marmotter}}.
+Probably from {{m|fr|marmotter}}.
 
 ===Pronunciation===
 * {{IPA|/maʁmo/|lang=fr}}
